Complete integrate ui auth module

--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>TCEcommerce</title>
+    <title>TC Ecommerce</title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -10,8 +10,6 @@
     <link id="theme-css" rel="stylesheet" type="text/css" href="./assets/layout/styles/theme/lara-light-indigo/theme.css">
   </head>
   <body class="bg-light">
-    <app-root>
-      <div class="donut centered"></div>
-    </app-root>
+    <app-root></app-root>
   </body>
 </html>
